fix: arreglado wrap de texto de los tipos pokemon

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ main{
   text-transform: capitalize;
 }
 
+.PokemonName p{
+  font-size: 14px;
+}
+
 .PokemonHeader img{
   width: 100px;
 }
